--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,10 @@
+//pluginManagement {
+//	repositories {
+//		maven { url 'https://repo.spring.io/milestone' }
+//		maven { url 'https://repo.spring.io/snapshot' }
+//		gradlePluginPortal()
+//	}
+//}
 rootProject.name = 'exchange'
 
 include("core")
