--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,8 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
-//    id 'org.hibernate.orm' version '6.1.7.Final'
-//    id 'org.graalvm.buildtools.native' version '0.9.20'
+    id 'org.graalvm.buildtools.native' version '0.9.20'
 }
 
 sourceCompatibility = '20'
@@ -19,10 +18,11 @@ repositories {
 }
 
 dependencies {
+    implementation project(':common')
 //    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 //    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 //    implementation 'org.apache.kafka:kafka-streams'
     implementation 'org.springframework.kafka:spring-kafka'
 
@@ -44,12 +44,3 @@ tasks.named('test') {
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs += "--enable-preview"
 }
-
-//hibernate {
-//    enhancement {
-//        lazyInitialization true
-//        dirtyTracking true
-//        associationManagement true
-//    }
-//}
-
