--- a/api/build.gradle
+++ b/api/build.gradle
@@ -12,20 +12,31 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+
+	implementation.exclude module: 'spring-boot-starter-tomcat'
 }
+
 
 repositories {
 	mavenCentral()
+}
+
+ext {
+	set("jakarta-servlet.version", '5.0.0')
 }
 
 dependencies {
 	implementation project(':common')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-jetty'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.mongodb:bson:4.8.2'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+//	implementation ('org.eclipse.jetty.http3:http3-server:11.0.15') {
+//		exclude module: 'jetty-slf4j-impl'
+//	}
 
 	compileOnly 'org.projectlombok:lombok'
 
@@ -37,9 +48,10 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.eclipse.jetty:jetty-server:11.0.14'
+	testImplementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 }
 
 tasks.named('test') {
